# golden-fleece-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/agent/: pyproject.toml
apps/agent/src/trading_agent/: __init__.py  graph.py  server.py  state.py
apps/agent/src/trading_agent/erc8004/: __init__.py
apps/agent/src/trading_agent/nodes/: __init__.py  analyze.py  decide.py  evaluate.py  execute.py  monitor.py  risk_check.py
apps/agent/src/trading_agent/tools/: __init__.py
apps/agent/tests/: conftest.py  test_graph.py  test_risk_check.py
apps/dashboard/: next.config.ts  package.json
apps/dashboard/src/app/: layout.tsx  page.tsx
apps/dashboard/src/components/: PerformanceCards.tsx  (+4 more)
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: RiskRouter.sol
contracts/src/interfaces/: IERC8004Identity.sol  IERC8004Reputation.sol  IERC8004Validation.sol
contracts/test/: RiskRouter.t.sol
contracts/test/fork/: ForkTest.t.sol
docs/: STUDY_GUIDE.md  TRADING_STRATEGIES.md
docs/impl/: 01-ERC8004-INTEGRATION.md  02-SIGNING-AND-WALLETS.md  03-BASE-SEPOLIA-INFRASTRUCTURE.md  04-AGENT-ARCHITECTURE.md  05-MARKET-DATA.md  06-TRADING-STRATEGY.md  07-VALIDATION-AND-TRUST.md  08-DASHBOARD.md  09-INFRASTRUCTURE.md  10-HACKATHON-STRATEGY.md
docs/research/: CHATGPT_DEEP_RESEARCH.md  CLAUDE_DEEP_RESEARCH.md  DEEP_RESEARCH_PROMTP.md  DEEP_RESEARCH_PROMTP.txt  GEMINI_DEEP_RESEARCH.md  GROK_DEEP_RESEARCH.md  INITIAL_RESEARCH.md
scripts/: bootstrap.sh  package.json  register-agent.ts
(+1 files in other folders)
