[project]
name = "trading-agent"
version = "0.1.0"
description = "Golden Fleece AI Trading Agent — ERC-8004 hackathon"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.9",
    "langchain-anthropic>=1.3.3",
    "langchain-core>=1.2.15",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "anthropic>=0.78.0,<1.0.0",
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    "httpx",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.10.0",
    "pandas",
    "numpy",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9.0",
]
